--- a/.github/workflows/build_frontend_app.yml
+++ b/.github/workflows/build_frontend_app.yml
@@ -40,4 +40,6 @@ jobs:
         git config --global user.name "Build Runner"
         git add --force ./docs/app
         git stash
+        git stash -u
+        git stash pop stash@{1}
         git diff-index --quiet HEAD || git commit -m "Automated pages app build" && git push
