--- a/.github/workflows/build_frontend_app.yml
+++ b/.github/workflows/build_frontend_app.yml
@@ -39,7 +39,5 @@ jobs:
       run: |
         git config --global user.name "Build Runner"
         git add --force ./docs/app
-        git stash
-        git stash -u
-        git stash pop stash@{1}
+        git clean -f
         git diff-index --quiet HEAD || git commit -m "Automated pages app build" && git push
