--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "daisyui": "^2.17.0",
+    "fflate": "^0.7.3",
     "ngx-clipboard": "^15.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
